--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
-    "name": "wandi/color-picker-bundle",
+    "name": "akojocari/color-picker-bundle",
     "type": "symfony-bundle",
-    "description": "Wandi/ColorPickerBundle",
+    "description": "ColorPickerBundle",
     "keywords": [
         "Symfony",
         "Bundle",
@@ -10,37 +10,25 @@
         "EasyAdminBundle",
         "Admin"
     ],
-    "homepage": "https://github.com/WandiParis/ColorPickerBundle",
+    "homepage": "https://github.com/akojocari/ColorPickerBundle",
     "license": "MIT",
     "authors": [
         {
-            "name": "Jacques N. de Lamballerie",
-            "email": "jndl@wandi.fr"
-        },
-        {
-            "name": "Laurent Fouquet",
-            "email": "laurent.fouquet@wandi.fr"
-        },
-        {
-            "name": "Laurent Bientz",
-            "email": "laurent.bientz@wandi.fr"
-        },
-        {
-            "name": "Jean-Baptiste Chateaux",
-            "email": "jean-baptiste.chateaux@wandi.fr"
+            "name": "Alexand Cojocari",
+            "email": "a.kojocari@gmail.com"
         }
     ],
     "minimum-stability": "stable",
     "require": {
-        "php": ">=7.1",
-        "symfony/config": "^4.0",
-        "symfony/dependency-injection": "^4.0",
-        "symfony/form": "^4.0",
-        "symfony/framework-bundle": "^4.0",
-        "symfony/http-kernel": "^4.0",
-        "symfony/translation": "^4.0",
-        "symfony/twig-bundle": "^4.0",
-        "symfony/validator": "^4.0",
+        "php": ">=7.1|| ^8.0",
+        "symfony/config": "^4.0 || ^5.0 || ^6.0",
+        "symfony/dependency-injection": "^4.0 || ^5.0 || ^6.0",
+        "symfony/form": "^4.0 || ^5.0 || ^6.0",
+        "symfony/framework-bundle": "^4.0 || ^5.0 || ^6.0",
+        "symfony/http-kernel": "^4.0 || ^5.0 || ^6.0",
+        "symfony/translation": "^4.0 || ^5.0 || ^6.0",
+        "symfony/twig-bundle": "^4.0 || ^5.0 || ^6.0",
+        "symfony/validator": "^4.0 || ^5.0 || ^6.0",
         "twig/extensions": "^1.5",
         "ssnepenthe/color-utils": "^0.4.2"
     },
